corpus/setblock.txt
=====
Setblock
=====
setblock ~ ~ ~ stone
setblock ~ ~ ~ minecraft:red_wool

---
(function
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block (block_type))
  )
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block (block_type))
  )
)

=====
Setblock with NBT
=====
setblock ~ ~ ~ lectern{Page:3}

---
(function
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block
      (block_type)
      (nbt_compound (nbt_key) (nbt_number))
    )
  )
)

=====
Setblock with block state
=====
setblock ~ ~ ~ piston[facing=up]

---
(function
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block
      (block_type)
      (block_state (block_state_key) (block_state_value))
    )
  )
)

=====
Setblock with block state and NBT
=====
setblock ~ ~ ~ lectern[facing=north]{Page:3}

---
(function
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block
      (block_type)
      (block_state (block_state_key) (block_state_value))
      (nbt_compound (nbt_key) (nbt_number))
    )
  )
)

=====
Setblock with NBT string
=====
setblock ~ ~ ~ foo{Bar:"Hello"}

---
(function
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block
      (block_type)
      (nbt_compound (nbt_key) (nbt_string))
    )
  )
)

=====
Setblock with NBT string using single quotes
=====
setblock ~ ~ ~ foo{Bar:'Hello'}

---
(function
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block
      (block_type)
      (nbt_compound (nbt_key) (nbt_string))
    )
  )
)

=====
Setblock with quoted NBT string with escape sequence
=====
setblock ~ ~ ~ foo{Bar:"Hello\nWorld"}

---
(function
  (command
    (coordinate)
    (coordinate)
    (coordinate)
    (block
      (block_type)
      (nbt_compound (nbt_key) (nbt_string (escape_sequence)))
    )
  )
)
